--- a/public/public.css
+++ b/public/public.css
@@ -12,6 +12,7 @@
 
 * {
   box-sizing: border-box;
+  border: none;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -40,16 +41,18 @@ button {
 
 #buy-now {
   display: flex;
-  width: 70%;
+  width: 100vw;
   justify-content: space-around;
+  margin: 2rem 0rem;
   background-image: linear-gradient(to right,#f4e8f3, #f3eff6, #eee0f9);
 }
 
-h1 {
+#buy-now h1 {
   font-size: 34px;
   font-family: "Inter";
   font-weight: 700;
   color: #3a4980;
+  padding:  2rem 0;
 }
 
 #buy-btn {
@@ -75,4 +78,19 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.info-right-side select{
+   background-color: #EBEDEC;
+   color: var(--ul_blue);
+   border-radius: 28px;
+   padding: 10px 10px;
+   font-size: 14px
+}
+
+option,
+optgroup{
+  background-color: #EBEDEC;
+   color: var(--ul_blue);
+   font-family: inherit;
 }
