--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -10,9 +10,25 @@ p {
 main {
   background-color: #fff;
   display: flex;
-  width: 70%;
+  width: 100%;
   justify-content: space-around;
-  border-radius: 14px 0;
+  
+}
+
+
+.information-section {
+  background-color: #f9fafb;
+  width: 40vw;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 2rem;
+}
+
+.intro{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .intro h2 {
@@ -22,9 +38,53 @@ main {
   color: #444;
 }
 
-.information-section {
-  background-color: #f9fafb;
+.reach-on{
+  display: flex;
+  gap: 1rem;
+}
+
+.iconne{
+  font-size: 20px;
+  color: #444;
+  font-weight: 700;
+  font-family: 'Montserrat', sans-serif;
+}
+
+#icone{
+  width: 24px;
+  height: 24px;
+  color: #1472B2;
+}
+
+.small{
+  color: #5A5A5A;
+  font-size: 16px;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+}
+
+#link{
+  color: #1472B2;
+  font-weight: 500;
+  font-size: 1rem;
+  font-family: 'Inter', sans-serif;
+}
+
+/* form section start */
+
+.form-section{
   display: flex;
   flex-direction: column;
   padding: 2rem;
+}
+
+.form-section h2{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 34px;
+  color: #444;
+}
+
+form{
+  display: flex;
 }
