--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -12,9 +12,7 @@ main {
   display: flex;
   width: 100%;
   justify-content: space-around;
-  
 }
-
 
 .information-section {
   background-color: #f9fafb;
@@ -25,7 +23,7 @@ main {
   padding: 2rem;
 }
 
-.intro{
+.intro {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -38,53 +36,115 @@ main {
   color: #444;
 }
 
-.reach-on{
+.reach-on {
   display: flex;
   gap: 1rem;
 }
 
-.iconne{
+.iconne {
   font-size: 20px;
   color: #444;
   font-weight: 700;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
-#icone{
+#icone {
   width: 24px;
   height: 24px;
-  color: #1472B2;
+  color: #1472b2;
 }
 
-.small{
-  color: #5A5A5A;
+.small {
+  color: #5a5a5a;
   font-size: 16px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
 }
 
-#link{
-  color: #1472B2;
+#link {
+  color: #1472b2;
   font-weight: 500;
   font-size: 1rem;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 /* form section start */
 
-.form-section{
+.form-section {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
   padding: 2rem;
 }
 
-.form-section h2{
-  font-family: 'Montserrat', sans-serif;
+.form-section h2 {
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 34px;
   color: #444;
 }
 
-form{
+form {
   display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+form .user-details {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: nowrap;
+}
+
+form .user-details .input {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+form label {
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  size: 1rem;
+  color: #444;
+}
+
+form input {
+  background-color: #f6f6f6;
+  padding: 1rem;
+
+  &::placeholder {
+    color: #000;
+    font-size: 15px;
+    font-family: inherit;
+  }
+}
+
+#textarea {
+  color: #444;
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: inherit;
+}
+
+textarea {
+  background-color: #cecece;
+  border: 1px;
+  padding: 2rem 1rem;
+  &::placeholder{
+    font-size: 15px;
+    font-family: inherit;
+    font-weight: 400;
+    color: #7b7b7b;
+  }
+}
+
+#send{
+  background-color: #1472B2;
+  color: #fff;
+  font-size: 1rem;
+  font-family: 'Montserrat' , sans-serif;
+  font-weight: 600;
+  text-align: center;
+  padding: 1rem 2rem;
 }
